# DC_lab1-2

./: main.py  pyproject.toml
alembic/: alembic.ini
alembic/migrations/: env.py
alembic/migrations/versions/: 0a0d9216ecd9_.py  1c0c962bfc90_.py  3ad09ea0f7dd_.py  894a533a2bb7_.py  b121eed2b2e1_.py  fce73a80b50a_.py
alembic/models/: NewsStickerModel.py  NoteModel.py  UserModel.py
controllers/: __init__.py  news_controller.py  note_controller.py  sticker_controller.py  user_controller.py
db/dbcore/: __init__.py  dbcore.py
db/migrations/: env.py
db/migrations/versions/: 12abbd32e0d2_.py  895bada43e99_.py
db/models/: NewsStickerModel.py
db/schemas/: schemas.py
models/: NewsStickerModel.py  NoteModel.py
repositories/: repository_base.py
repositories/sql_repositories/: __init__.py  news_repository.py  note_repository.py  sticker_repository.py  user_repository.py
schemas/: schemas.py
services/data_provider_service/: data_provider.py  data_provider_base.py  news_provider_base.py  note_provider_base.py  sticker_provider_base.py  user_provider_base.py
services/data_provider_service/sql_provider/: sql_news_provider.py  sql_note_provider.py  sql_sticker_provider.py  sql_user_provider.py
